# mimir

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.org  conanfile.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: conan-gcc.yml  conan-msvc.yml  gh-pages.yml
_static/: darkness.gnu  enumerable.css  eq_fix.css
api/: class_view_hierarchy.html  classmimir_1_1IAlgorithm.html  dir_mimir.html  file_mimir_IAlgorithm.hpp.html  file_view_hierarchy.html  library-api.html  namespace_mimir.html  program_listing_file_mimir_IAlgorithm.hpp.html  unabridged_api.html  unabridged_orphan.html
api_private/: class_view_hierarchy.html  classmimir_1_1Options.html  classmimir_1_1algorithm_1_1FishSchool.html  classmimir_1_1algorithm_1_1KinematicVessel.html  classmimir_1_1algorithm_1_1Leadline.html  classmimir_1_1algorithm_1_1PursePlanner.html  classmimir_1_1algorithm_1_1PursePlannerFormulation.html  classmimir_1_1algorithm_1_1TestAlgorithm.html  classmimir_1_1control_1_1CommandListener.html  classmimir_1_1control_1_1CommandResponder.html  classmimir_1_1control_1_1StateNotifier.html  dir_src.html  dir_src_mimir.html  dir_src_mimir_algorithm.html  dir_src_mimir_control.html  dir_src_mimir_program.html  file_src_mimir_FkinDds.hpp.html  file_src_mimir_MimirPriv.hpp.html  file_src_mimir_StateMachine.hpp.html  file_src_mimir_StateMachineFwd.hpp.html  file_src_mimir_algorithm_AlgorithmFactory.hpp.html  file_src_mimir_algorithm_FishSchool.hpp.html  file_src_mimir_algorithm_KinematicVessel.hpp.html  file_src_mimir_algorithm_Leadline.hpp.html  file_src_mimir_algorithm_PursePlanner.hpp.html  file_src_mimir_algorithm_PursePlannerFormulation.hpp.html  file_src_mimir_algorithm_TestAlgorithm.hpp.html  file_src_mimir_control_CommandResponder.hpp.html  file_src_mimir_control_StateNotifier.hpp.html  file_src_mimir_mimir.hpp.html  file_src_mimir_program_Config.hpp.html  file_src_mimir_program_Convenience.hpp.html  file_src_mimir_program_Options.hpp.html  file_view_hierarchy.html  function_namespacemimir_1_1detail_1a495352727411b7952358e031d0b4398e.html  function_namespacemimir_1_1detail_1a4edbe193d90ba66d98d42b380008c618.html  function_namespacemimir_1_1detail_1ab2f8aaf370c0379e1e5ed16cdfd819c3.html  function_namespacemimir_1_1program_1a0322295105de34488b656521c2c13e49.html  function_namespacemimir_1_1program_1a61839fde6d16792c4662769b5116da05.html  function_namespacemimir_1_1program_1a7337f2e8311a587cd0c5683bb0f9c38e.html  (+49 more)
cmake/: FindOpenSplice.cmake  projectConfig.cmake.in
docs/: CMakeLists.txt  SfhDocHelpers.cmake  conf.py.in  emacs-install-pkgs.el  emacs-load.el  index.org  mimir.1  requirements.txt
docs/_templates/: footer.html
docs/org/: extending.org  formulation.org  installation.org  intro.org  libraries.org  planner.org  usage.org  yamlconfig.org  zbibliography.org
docs/static/: bib.bib  mathwork.js  style.puml
docs/tex/: defs.tex
examples/: config.yaml  fish.yml  leadline.yml  lint.yaml  opti.py  purse-planner.yml  test.yml  tmux-mimir.yml  vessel.yml
include/mimir/: IAlgorithm.hpp
rst/: extending.html  formulation.html  installation.html  intro.html  libraries.html  planner.html  usage.html  yamlconfig.html  zbibliography.html
src/: CMakeLists.txt
src/idl/: fkin_types.idl  ratatosk_types.idl
src/mimir/: FkinDds.hpp  MimirPriv.cpp  MimirPriv.hpp  StateMachine.cpp  StateMachine.hpp  StateMachineFwd.hpp  mimir.hpp
src/mimir/algorithm/: AlgorithmFactory.cpp  AlgorithmFactory.hpp  FishSchool.cpp  FishSchool.hpp  KinematicVessel.cpp  KinematicVessel.hpp  Leadline.cpp  Leadline.hpp  PursePlanner.cpp  PursePlanner.hpp  PursePlannerFormulation.cpp  PursePlannerFormulation.hpp  TestAlgorithm.cpp  TestAlgorithm.hpp
src/mimir/control/: CommandResponder.hpp  StateNotifier.hpp
src/mimir/program/: Config.cpp  Config.hpp  Convenience.cpp  Convenience.hpp  Options.cpp  Options.hpp
src/programs/: checker.cpp  mimir.cpp  testing.cpp
tools/docker/: builder.df  run-mimir.df
tools/scripts/: bashrcpost.sh
